--- a/.github/workflows/indices.yml
+++ b/.github/workflows/indices.yml
@@ -7,18 +7,13 @@ on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
+    
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
     - name: Checkout repository
@@ -27,3 +22,9 @@ jobs:
     - name: Generate indices.zip
       run: |
         zip -r indices.zip planetes/*
+        
+    - name: Upload Archive
+      uses: actions/upload-artifact@v2
+      with:
+        name: indices-archive
+        path: indices.zip
